fix: Align visibilty button icon - EXO-61792
Align visibilty button icon

--- a/documents-webapp/src/main/webapp/skin/less/documents.less
+++ b/documents-webapp/src/main/webapp/skin/less/documents.less
@@ -355,6 +355,10 @@
     .v-data-table__mobile-row {
       display: unset !important;
     }
+    .visibility-btn {
+      width: 15px !important;
+      height: 15px !important;
+    }
   }
   .documentInfoDrawer {
     .v-list-item {
